--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/router": "^21.1.0",
     "@angular/common": "^21.1.0",
     "@angular/forms": "^21.1.0",
+    "pdfjs-dist": "3.11.174",
     "@angular/build": "^21.1.0",
     "@angular/cli": "^21.1.0",
     "@angular/compiler-cli": "^21.1.0",
